--- a/CMD_19Sep2018.ipynb
+++ b/CMD_19Sep2018.ipynb
@@ -42,76 +42,7 @@
    "cell_type": "code",
    "execution_count": 3,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "0        0.193\n",
-      "1        1.702\n",
-      "2        0.532\n",
-      "3        0.425\n",
-      "4        0.501\n",
-      "5        0.627\n",
-      "6        0.880\n",
-      "7        0.224\n",
-      "8        0.338\n",
-      "9        0.184\n",
-      "10       0.607\n",
-      "11       0.286\n",
-      "12       0.276\n",
-      "13       0.201\n",
-      "14       0.677\n",
-      "15       0.611\n",
-      "16       0.416\n",
-      "17       0.617\n",
-      "18       0.588\n",
-      "19       0.614\n",
-      "20       0.216\n",
-      "21       0.166\n",
-      "22       0.272\n",
-      "23       0.384\n",
-      "24       0.332\n",
-      "25       0.524\n",
-      "26       0.662\n",
-      "27       0.688\n",
-      "28       0.482\n",
-      "29       0.655\n",
-      "         ...  \n",
-      "13321    0.695\n",
-      "13322    0.859\n",
-      "13323    0.482\n",
-      "13324    1.118\n",
-      "13325    0.468\n",
-      "13326    0.820\n",
-      "13327    0.182\n",
-      "13328    0.671\n",
-      "13329    0.742\n",
-      "13330    0.634\n",
-      "13331    0.668\n",
-      "13332    0.555\n",
-      "13333    0.717\n",
-      "13334    0.714\n",
-      "13335    0.744\n",
-      "13336    0.732\n",
-      "13337    0.714\n",
-      "13338    0.959\n",
-      "13339    0.371\n",
-      "13340    0.883\n",
-      "13341    0.581\n",
-      "13342    0.719\n",
-      "13343    0.482\n",
-      "13344    0.095\n",
-      "13345    0.777\n",
-      "13346    0.952\n",
-      "13347    0.797\n",
-      "13348    0.937\n",
-      "13349    0.359\n",
-      "13350    0.215\n",
-      "Name: jMINUSk, Length: 13351, dtype: float64\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "# Read in my data from a .csv file saved locally.\n",
     "phot_data = pd.read_csv('CMDKhanANDSibbonsHOME_ahirschauer.csv')\n",
@@ -124,7 +55,7 @@
     "# Okay, I'm also uploading a specific .csv file for J-K\n",
     "jMINUSkDATA = pd.read_csv('jMINUSk.csv')\n",
     "#\n",
-    "print jMINUSkDATA.jMINUSk"
+    "# print jMINUSkDATA.jMINUSk"
    ]
   },
   {
