--- a/Color-Cuts_K_vs_J-K_20Nov2018.ipynb
+++ b/Color-Cuts_K_vs_J-K_20Nov2018.ipynb
@@ -3926,7 +3926,8 @@
     "plt.axvline(x=16.94, linewidth=1.5, color='lightgreen') # TRGB value determined from KDE below\n",
     "plt.grid(True)\n",
     "plt.show()\n",
-    "plt.close()"
+    "plt.close()\n",
+    "#plt.savefig('K_vs_J-K_TRGB_histogram.pdf')"
    ]
   },
   {
@@ -3970,7 +3971,8 @@
     "plt.axvline(x=16.94, linewidth=1.5, color='lightgreen') # TRGB value determined from KDE below\n",
     "plt.grid(True)\n",
     "plt.show()\n",
-    "plt.close()"
+    "plt.close()\n",
+    "#plt.savefig('K_vs_J-K_KDE.pdf')"
    ]
   },
   {
@@ -5842,7 +5844,7 @@
     "plt.grid(True)\n",
     "plt.show()\n",
     "plt.close()\n",
-    "#plt.savefig('K_vs_J-K_color-cuts.pdf')"
+    "#plt.savefig('K_vs_J-K_TRGB.pdf')"
    ]
   },
   {
