--- a/Color-Cuts_K_vs_J-K_20Nov2018.ipynb
+++ b/Color-Cuts_K_vs_J-K_20Nov2018.ipynb
@@ -5836,6 +5836,7 @@
     "### plot points\n",
     "xvalues1 = [0.072, 0.216, 0.360, 0.504, 0.648, 0.792, 0.936, 1.080, 1.224, 1.368, 1.512, 1.656, 1.800, 1.944]\n",
     "boundary1 = [17.205, 16.790, 16.930, 16.445, 17.260, 17.000, 16.790, 17.108, 17.100, 16.560, 16.510, 16.820, 16.620, 16.220]\n",
+    "# 16.790 -> 17.245 (bin #7)\n",
     "#\n",
     "plt.plot(xvalues1, boundary1)\n",
     "plt.axhline(y=17.1, linewidth=1.5, color='violet') # Sibbons+ (2012) TRGB value\n",
